[project]
name = "twitter-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.2",
    "httpx[socks]>=0.28.1",
    "mcp[cli]>=1.6.0",
    "tweepy[async]>=4.15.0",
]
